# 2430personal

./: .gitignore  CMakeLists.txt  global_func.cmake  wizard
openrtos/: CMakeLists.txt  Kconfig  def.cmake  toolchain.cmake
project/arm_lite_codec/: CMakeLists.txt  arm_crt0.S  codecs_defs.h  config.cmake  default.lds  gpio.c  ith_utility.c  main.c  tlb.c
project/bootloader/: CMakeLists.txt  Kconfig  boot.c  bootloader.h  logo.c  main.c  main_openrtos.c  recovery.c  restore.c  upgrade.c  usbdevice.c
project/burner_portable/: CMakeLists.txt  Kconfig  burner.c  config.c  config.h  external_process.c  function_table.c  load_script.c  main.c  scene.c  scene.h  script.lex.c  script.tab.c  script.tab.h  setting.ini  storage.c  target_control.c  upgrade.c
project/dynamic_ui/: CMakeLists.txt  Kconfig  Kconfig.win32  dynamic_ui.c  dynamic_ui.docx  main.c
project/dynamic_ui/itu/: dynamic_ui.itu  dynamic_ui.xml
project/test_audio/: CMakeLists.txt  FPGA_v7_config  Kconfig  Kconfig.win32  test_i2s.docx  test_openrtos.c
project/test_audio/audioHWctrl/: audio_ctrl.c  audio_ctrl.h  gwavhead.c  test.h  test_main_adc_rec_play.c  test_main_bist_record.c  test_main_fft_snr.c  test_main_louder.c  test_main_simple.c  test_main_usb.c  test_main_usb_record.c  wavheader.h
project/test_audio/audioHWctrl/testwav/: 16K_1000Hz.hex  32K_1000Hz.hex  48K_1125Hz.hex  8K_1000Hz.hex  test_48K_16bit.hex
project/test_audio/audioMgr/: audio.c  test.hex  test_main_audiomgr.c  test_mp3codec.c
project/test_audio/fft/: fft.h  fft_tool.c
project/test_audio/sdl/: audio.c  main_processor_message_queue.c  main_processor_message_queue.h
project/test_cap/: CMakeLists.txt  Kconfig  Kconfig.win32  Test_cap.docx  test_itv.c  test_itv.h  test_modules.c  test_openrtos.c  test_win32.c
project/test_ecm/: 4G.docx  CMakeLists.txt  Kconfig  Kconfig.L718  Kconfig.N720  Kconfig.N720.option  readme_Air720SL.txt  readme_L718.txt  readme_N720.txt  test_N720_option.c  test_dial_io_mode.c  test_ecm.c  test_openrtos.c
project/test_ethernet/: CMakeLists.txt  Kconfig  doorbell.h  iperf_main.c  socket_main.c  test_config.h  test_ethernet_lwip.c
project/test_gpio/: CMakeLists.txt  Kconfig  Kconfig.win32  gpio_input.c  gpio_interrupt.c  gpio_output_to_input.c  test_gpio.docx  test_gpio_ex4.c
project/test_homebus/: CMakeLists.txt  Kconfig  test_homebus.c
project/test_homebus/hlink/: uart_rx.c  uart_rx.h  uart_tx.c
project/test_iic/: CMakeLists.txt  Kconfig  Kconfig.win32  test_iic.c  test_iic.docx  test_iic_touch.c
project/test_input/: CMakeLists.txt  Kconfig  layer_keyboardJY.c  layer_keyboardPY.c  test_input.c  test_input.docx
project/test_input/itu/800x480/: ChineseKeyboard.itu
project/test_ir/: CMakeLists.txt  Kconfig  test_clk_sample.c  test_ir.docx  test_ir_rx.c  test_ir_txrx.c  test_openrtos.c
project/test_pattern_gen/: CMakeLists.txt  Kconfig  test_pattern_gen.c
project/test_qrdecode/: CMakeLists.txt  Kconfig  Kconfig.win32  test_main.c  test_openrtos.c  test_qrdecode.docx
project/test_qrdecode/itu/: qrdecode.itu  qrdecode.xml
project/test_qrencode/: CMakeLists.txt  Kconfig  Kconfig.win32  test_main.c  test_qrencode.docx
project/test_qrencode/itu/: qrencode.itu  qrencode.xml
project/test_rsl_master/: CMakeLists.txt  Kconfig  test_rsl_master.c
project/test_rtc/: CMakeLists.txt  Kconfig  Kconfig.win32  test_openrtos.c  test_rtc.c  test_rtc.docx  test_win32.c
project/test_saradc/: CMakeLists.txt  Kconfig  Kconfig.win32  test_keypad_16.c  test_openrtos.c  test_saradc.c  test_saradc.docx
project/test_sd/: CMakeLists.txt  Kconfig  test_sd.docx  test_sd_window.c
project/test_send_email/: CMakeLists.txt  Kconfig  config.c  doorbell.h  network.c  send_email_test.docx  test_send_email.c
project/test_touch/: CMakeLists.txt  Kconfig  Kconfig.win32  test_touch.c  test_touch.docx
project/test_ui/: CMakeLists.txt  Kconfig  Kconfig.win32  UI_3D_Flip.c  UI_Animation_Switching.c  UI_Arc_StepWheel.c  UI_Arc_Wheel.c  UI_Arc_Wheel_with_Clipper.c  UI_Cartoon_ScaleCoverflow.c  UI_CoverFlow_overlap_MyFavoriteBread.c  UI_Coverflow_Part_MyFavorite.c  UI_Dynamic_Menu.c  UI_Menu_LinkSurface.c  UI_MyFavorite.c  UI_Roulette_Arc_Widgets.c  UI_Water_level_Adjusting.c  UI_laundry.c  ctrlboard.h  ctrlboard.ini  test_ui.docx
project/test_ui/itu/: UI_3D_Flip.itu  UI_3D_Flip.mainLayer  UI_3D_Flip.xml  UI_Cartoon_ScaleCoverflow.itu  UI_Cartoon_ScaleCoverflow.mainLayer  UI_Coverflow_Part_MyFavorite.itu  UI_Coverflow_Part_MyFavorite.xml  UI_Dynamic_Menu.itu  UI_Dynamic_Menu.xml  UI_Laundry.itu  UI_Menu_LinkSurface.itu  UI_Menu_LinkSurface.mainLayer  UI_Menu_LinkSurface.xml  UI_MyFavorite.itu  UI_MyFavorite.xml  UI_Roulette_Arc_Widgets.itu  UI_Roulette_Arc_Widgets.xml  UI_Water_level_Adjusting.itu  UI_Water_level_Adjusting.xml
project/test_usb/: CMakeLists.txt  Kconfig.gadget.9860  Kconfig.hcc.mst  Kconfig.hid  Kconfig.msc  Kconfig.sd.9860  Kconfig.transparent  Kconfig.transport  hid_transparent.c  hid_transparent.h  kbd_scancode.c  test_card.c  test_usb_hid_transparent.c  test_usb_hid_transport.c  test_usb_kbd.c  test_usb_mouse.c  test_usb_msc.c  test_usbd_acm.c  test_usbd_fsg.c  usbd - RS232 over USB.docx  usbd - mass storage.docx  usbh - hid host transport layer.docx  usbh - mouse & kbd.docx
project/test_video/: CMakeLists.txt  Kconfig  test_elementary.c  test_mjpeg.c  test_player_970.c  test_video.docx
project/test_wiegand/: CMakeLists.txt  Kconfig  Kconfig.win32  test_openrtos.c  test_read_card.c  test_wiegand.c  test_wiegand.docx  test_wiegandout_o2i.c  test_win32.c
project/test_wifi_ethernet/: CMakeLists.txt  Kconfig  config.c  doorbell.h  mdns_example.c  mqtt.c  mqtt_example.c  mqtt_example.h  network.c  test_wifi_ethernet.c  wifi_ethernet_test.docx
project/test_wifi_sdio/: CMakeLists.txt  Kconfig  dns_main.c  iperf_main.c  socket_main.c  test_config.h  test_wifi_ngpl_lwip.c  test_wifi_ssv_lwip.c
project/test_wifi_sdio_ethernet/: CMakeLists.txt  Kconfig_eus  Kconfig_ngpl  iperf_main.c  test_config.h  test_openrtos.c  test_wifi_ngpl_lwip.c  test_wifi_usb_lwip.c
sdk/: CMakeLists.txt  Kconfig  def.cmake  (+1 more)
(+2448 files in other folders)
